<resources>
    <string name="app_name">Sacco Demo</string>
    <string name="enter_help">Enter your phone number to get started</string>
    <string name="you_will">You will receive a verification code. Carrier rates may apply.</string>
    <string name="next">Next</string>
    <string name="enter_code">"Enter the code we sent to "</string>
    <string name="enter">Enter Code</string>
    <string name="wait_code">"Waiting for the code sent to "</string>
    <string name="someWrong">Somthing is wrong, try again after 1 hour...</string>
    <string name="YourPhone">Phone Number</string>
    <string name="login">Login</string>
    <string name="createAccount">No Account?</string>
    <string name="signuphere">Sign Up Here</string>
    <string name="ugCode">+256</string>
    <string name="ug7">7</string>
    <string name="dash">_ _ _ _ _ _</string>
    <string name="loginwithphone">Login with your Phone</string>
    <string name="createAccountAs">Create Account As</string>
    <string name="saccoAdmin">Sacco Administrator</string>
    <string name="member">Sacco Member</string>
    <string name="fName">Full Name</string>
    <string name="adminName">Enter your Name</string>
    <string name="saccoName">Enter Sacco Name</string>
    <string name="signUp">Sign Up</string>
    <string name="upload">Upload Sacco Image</string>
    <string name="invalidCode">Invalid code.</string>
    <string name="phoneSuccess">Phone has been registered</string>
    <string name="saccoLogin">Sacco Login</string>
    <string name="notregistered">is not registered under any Sacco Group. Please create a new group or request the Admin to register you</string>
    <string name="pleasewait">Please wait</string>
    <string name="missing">Missing some details</string>
    <string name="saccoSignup">Sacco Signup</string>
    <string name="createAdmin">Create new Sacco Group</string>
    <string name="settingup">Setting up account.</string>
    <string name="ugx">UGX</string>
    <string name="total">Total Saved</string>
    <string name="two5">258,000</string>
    <string name="what">What would you like to view?</string>
    <string name="savings">Savings</string>
    <string name="loans">Loans</string>
    <string name="group">Group Details</string>
    <string name="laws">Laws</string>
    <string name="hellothere">"Hello there, "</string>
    <string name="deposits">Deposits</string>
    <string name="payout">Payout</string>
    <string name="cycle">Cycle length</string>
    <string name="month">12 Months</string>
    <string name="ten">10</string>
    <string name="three4">340,000</string>
    <string name="transaction">Transaction history (Offline)</string>
    <string name="cotribution">Contributions</string>
    <string name="totalthisweek">Total this week</string>
    <string name="cumulative">Cumulative total</string>
    <string name="sixm">Ugx 6,925,000</string>
    <string name="two6">Ugx 268,000</string>
    <string name="addMember">Add Member</string>
    <string name="enterMemberName">Enter Members Name</string>
    <string name="memberPhone">Member Phone</string>
    <string name="add">ADD</string>
    <string name="memberRegisterd">Member Added.</string>
    <string name="nameReq">Name required</string>
    <string name="phoneReq">Phone required</string>
    <string name="Member">Member</string>
    <string name="amount">Amount</string>
    <string name="action">Action</string>
    <string name="makeDepo">Make Deposit</string>
    <string name="entermoney">Enter Amount</string>
    <string name="ok">Ok</string>
    <string name="amountReq">Amount required</string>
    <string name="cannotDep">Cannot deposit this amount</string>
    <string name="amountDeposited">Amount deposited</string>
    <string name="date">Date</string>
    <string name="balac">Balance</string>
    <string name="contributionsoffline">Contributions (Offline)</string>
    <string name="contributionsonline">Contributions (Online)</string>
    <string name="logout">LOG OUT</string>
    <string name="confirmLogout">Confirm action</string>
    <string name="saccoLogout">Sacco Logout</string>
</resources>
