<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Demo.Registration.PhoneRegister">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAlignment="center"
        android:text="@string/enter_help"
        android:layout_below="@id/toolbar"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/you_will"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.TextInputLayoutList"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ugCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ugCode"
                android:editable="false"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YourPhone"
            style="@style/Widget.AppTheme.TextInputLayoutList"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            android:id="@+id/phoneWrapper">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="phone"
                android:text="@string/ug7"
                android:id="@+id/userPhone"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/next"
        android:layout_gravity="center"
        android:background="@drawable/round_view_accented"
        android:layout_below="@id/layout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/white" />
</RelativeLayout>