<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/addMember"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enterMemberName"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorAccent"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/MName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/member"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ugCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ugCode"
                    android:editable="false"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/memberPhone"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorAccent"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                android:id="@+id/phoneWrapper">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:text="@string/ug7"
                    android:id="@+id/userPhone"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/addMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="end"
            android:text="@string/add"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:textAlignment="textEnd"
            android:textSize="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:textStyle="bold"
            android:gravity="end" />

    </LinearLayout>
</LinearLayout>