<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Demo.Main.Contributions">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/cotribution"
                android:layout_marginRight="70dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ctLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:background="@drawable/round_view"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totalthisweek"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal" />



                    <TextView
                        android:id="@+id/saccoSavings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two6"
                        android:textAlignment="textStart"
                        android:textSize="22dp"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        tools:ignore="RtlCompat" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cumulative"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal" />



                    <TextView
                        android:id="@+id/saccoCumulativeDeposits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sixm"
                        android:textAlignment="textStart"
                        android:textSize="22dp"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        tools:ignore="RtlCompat" />


                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/ctStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contributionsoffline"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="7dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/Member"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
                <TextView
                    android:text="@string/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
                <TextView
                    android:text="@string/action"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />


            </LinearLayout>
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/listDivider" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/transactionHisRecycler"/>





        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:layout_above="@id/deposit"
        app:srcCompat="@drawable/ic_group_black_24dp"
        tools:ignore="VectorDrawableCompat" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_monetization_on_black_24dp"
        tools:ignore="VectorDrawableCompat" />
</RelativeLayout>