<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Demo.Registration.Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/noAccount"
        android:layout_marginLeft="40dp"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginwithphone"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ugCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ugCode"
                    android:editable="false"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/YourPhone"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:textColorHint="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                android:id="@+id/phoneWrapper">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:text="@string/ug7"
                    android:id="@+id/userPhone"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/common_signin_button_text"
            android:layout_gravity="center"
            android:background="@drawable/round_view_accented"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/noAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAdmin"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>
</RelativeLayout>