<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/createAccountAs"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="#2d2d2d"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/saccoAdmin"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/member"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="#2d2d2d"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/member"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>